graphml by user

--- a/link_prediction/codes/supervised.ipynb
+++ b/link_prediction/codes/supervised.ipynb
@@ -1332,7 +1332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "2eda4099",
    "metadata": {},
    "outputs": [],
@@ -1340,6 +1340,195 @@
     "\n",
     "dfg = pd.read_csv('../data/linkPrediction.csv',index_col=0)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "electrical-munich",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>u</th>\n",
+       "      <th>v</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>province</th>\n",
+       "      <th>city</th>\n",
+       "      <th>geoDistance</th>\n",
+       "      <th>reviewsDiff</th>\n",
+       "      <th>scoreDiff</th>\n",
+       "      <th>priceDiff</th>\n",
+       "      <th>reviewsSum</th>\n",
+       "      <th>scoreSum</th>\n",
+       "      <th>priceSum</th>\n",
+       "      <th>specialDiets</th>\n",
+       "      <th>cuisines</th>\n",
+       "      <th>menu</th>\n",
+       "      <th>covidMeasure</th>\n",
+       "      <th>travellersChoice</th>\n",
+       "      <th>claimed</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.715297</td>\n",
+       "      <td>223.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>235.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.679636</td>\n",
+       "      <td>230.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>242.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.744998</td>\n",
+       "      <td>156.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>168.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.788271</td>\n",
+       "      <td>748.0</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>760.0</td>\n",
+       "      <td>8.5</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.746521</td>\n",
+       "      <td>209.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>221.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   u  v  weight  province  city  geoDistance  reviewsDiff  scoreDiff  \\\n",
+       "0  0  1     1.0       0.0   0.0     0.715297        223.0        1.0   \n",
+       "1  0  2     1.0       0.0   0.0     0.679636        230.0        1.0   \n",
+       "2  0  3     1.0       0.0   0.0     0.744998        156.0        1.0   \n",
+       "3  0  4     1.0       0.0   0.0     0.788271        748.0        1.5   \n",
+       "4  0  5     1.0       0.0   0.0     0.746521        209.0        1.0   \n",
+       "\n",
+       "   priceDiff  reviewsSum  scoreSum  priceSum  specialDiets  cuisines   menu  \\\n",
+       "0        2.5       235.0       9.0       2.5           1.0       3.0   True   \n",
+       "1        2.5       242.0       9.0       2.5           1.0       1.0  False   \n",
+       "2        1.0       168.0       9.0       1.0           3.0       0.0  False   \n",
+       "3        2.5       760.0       8.5       2.5           1.0       2.0   True   \n",
+       "4        1.0       221.0       9.0       1.0           2.0       2.0  False   \n",
+       "\n",
+       "   covidMeasure  travellersChoice  claimed  \n",
+       "0          True              True     True  \n",
+       "1         False              True     True  \n",
+       "2         False             False     True  \n",
+       "3         False             False     True  \n",
+       "4         False              True     True  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfg.head()"
    ]
   },
   {
@@ -1505,6 +1694,225 @@
    "source": [
     "X_train.to_csv('../data/supervisedTrain.csv')\n",
     "X_test.to_csv('../data/supervisedTest.csv') "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "functioning-animation",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train= pd.read_csv('../data/supervisedTrain.csv',index_col=0)\n",
+    "X_test= pd.read_csv('../data/supervisedTest.csv',index_col=0) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "distributed-radar",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>u</th>\n",
+       "      <th>v</th>\n",
+       "      <th>province</th>\n",
+       "      <th>city</th>\n",
+       "      <th>geoDistance</th>\n",
+       "      <th>reviewsDiff</th>\n",
+       "      <th>scoreDiff</th>\n",
+       "      <th>priceDiff</th>\n",
+       "      <th>reviewsSum</th>\n",
+       "      <th>scoreSum</th>\n",
+       "      <th>priceSum</th>\n",
+       "      <th>specialDiets</th>\n",
+       "      <th>cuisines</th>\n",
+       "      <th>menu</th>\n",
+       "      <th>covidMeasure</th>\n",
+       "      <th>travellersChoice</th>\n",
+       "      <th>claimed</th>\n",
+       "      <th>connected</th>\n",
+       "      <th>common</th>\n",
+       "      <th>jaccards</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2679</th>\n",
+       "      <td>7113</td>\n",
+       "      <td>4007</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.001580</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.116279</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>261924</th>\n",
+       "      <td>9775</td>\n",
+       "      <td>8044</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.404040</td>\n",
+       "      <td>718.0</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>726.0</td>\n",
+       "      <td>8.5</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33574</th>\n",
+       "      <td>9029</td>\n",
+       "      <td>6184</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.426159</td>\n",
+       "      <td>59.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>71.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.055556</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>52100</th>\n",
+       "      <td>8079</td>\n",
+       "      <td>1773</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.030509</td>\n",
+       "      <td>53.0</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>103.0</td>\n",
+       "      <td>9.5</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>126894</th>\n",
+       "      <td>9244</td>\n",
+       "      <td>6650</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.520406</td>\n",
+       "      <td>59.0</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>97.0</td>\n",
+       "      <td>8.5</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.019608</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           u     v  province  city  geoDistance  reviewsDiff  scoreDiff  \\\n",
+       "2679    7113  4007       1.0   1.0     0.001580          3.0        0.0   \n",
+       "261924  9775  8044       0.0   0.0     1.404040        718.0        0.5   \n",
+       "33574   9029  6184       1.0   0.0     0.426159         59.0        0.0   \n",
+       "52100   8079  1773       0.0   1.0     0.030509         53.0        0.5   \n",
+       "126894  9244  6650       0.0   0.0     1.520406         59.0        0.5   \n",
+       "\n",
+       "        priceDiff  reviewsSum  scoreSum  priceSum  specialDiets  cuisines  \\\n",
+       "2679          0.0        43.0       9.0       2.0           1.0       2.0   \n",
+       "261924        2.5       726.0       8.5       2.5           0.0       0.0   \n",
+       "33574         3.0        71.0       8.0       5.0           0.0       1.0   \n",
+       "52100         0.0       103.0       9.5       5.0           0.0       0.0   \n",
+       "126894        0.0        97.0       8.5       5.0           0.0       1.0   \n",
+       "\n",
+       "         menu  covidMeasure  travellersChoice  claimed  connected  common  \\\n",
+       "2679    False         False             False    False          1     5.0   \n",
+       "261924   True         False             False     True          0     0.0   \n",
+       "33574   False         False             False     True          1     1.0   \n",
+       "52100   False         False             False     True          1     0.0   \n",
+       "126894  False         False             False     True          1     1.0   \n",
+       "\n",
+       "        jaccards  \n",
+       "2679    0.116279  \n",
+       "261924  0.000000  \n",
+       "33574   0.055556  \n",
+       "52100   0.000000  \n",
+       "126894  0.019608  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.sample(5)"
    ]
   },
   {
