--- a/open_question/code/Untitled.ipynb
+++ b/open_question/code/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "virgin-lighter",
    "metadata": {},
    "outputs": [],
@@ -11,13 +11,14 @@
     "import numpy as np \n",
     "import networkx as nx \n",
     "import json \n",
+    "from datetime import datetime\n",
     "import matplotlib.pyplot as plt \n",
     "import seaborn as sns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "id": "amateur-commissioner",
    "metadata": {},
    "outputs": [],
@@ -35,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "id": "progressive-invalid",
    "metadata": {},
    "outputs": [],
@@ -52,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "id": "opponent-fountain",
    "metadata": {},
    "outputs": [
@@ -70,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "id": "split-sitting",
    "metadata": {},
    "outputs": [],
@@ -80,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "id": "fitting-arbor",
    "metadata": {},
    "outputs": [],
@@ -90,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 11,
    "id": "fewer-hacker",
    "metadata": {},
    "outputs": [
@@ -108,312 +109,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "statutory-bottle",
    "metadata": {},
    "outputs": [],
    "source": [
-    "connected = components[0]\n",
-    "for i"
+    "C = G.subgraph(components[0])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "id": "laden-architecture",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "dedicated-transcription",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>geografia</th>\n",
-       "      <th>giorno</th>\n",
-       "      <th>data</th>\n",
-       "      <th>totale_casi_positivi</th>\n",
-       "      <th>totale_casi_positivi_ab</th>\n",
-       "      <th>deceduti</th>\n",
-       "      <th>deceduti_inc</th>\n",
-       "      <th>letalita</th>\n",
-       "      <th>totale_ricoveri</th>\n",
-       "      <th>totale_ricoveri_inc</th>\n",
-       "      <th>attualmente_positivi</th>\n",
-       "      <th>dimessi</th>\n",
-       "      <th>tamponi</th>\n",
-       "      <th>tamponi_inc</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>AR</td>\n",
-       "      <td>0</td>\n",
-       "      <td>24/2/2020</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>FI</td>\n",
-       "      <td>0</td>\n",
-       "      <td>24/2/2020</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>GR</td>\n",
-       "      <td>0</td>\n",
-       "      <td>24/2/2020</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>LI</td>\n",
-       "      <td>0</td>\n",
-       "      <td>24/2/2020</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>LU</td>\n",
-       "      <td>0</td>\n",
-       "      <td>24/2/2020</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6673</th>\n",
-       "      <td>SI</td>\n",
-       "      <td>476</td>\n",
-       "      <td>14/6/2021</td>\n",
-       "      <td>13811</td>\n",
-       "      <td>52.408491</td>\n",
-       "      <td>328.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>2.374919</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6674</th>\n",
-       "      <td>Toscana</td>\n",
-       "      <td>476</td>\n",
-       "      <td>14/6/2021</td>\n",
-       "      <td>243457</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>6819.0</td>\n",
-       "      <td>0.044014</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>253.0</td>\n",
-       "      <td>-3.065134</td>\n",
-       "      <td>4206.0</td>\n",
-       "      <td>232432.0</td>\n",
-       "      <td>3768423.0</td>\n",
-       "      <td>0.107694</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6675</th>\n",
-       "      <td>aslCENTRO</td>\n",
-       "      <td>476</td>\n",
-       "      <td>14/6/2021</td>\n",
-       "      <td>112671</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>3417.0</td>\n",
-       "      <td>0.029274</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6676</th>\n",
-       "      <td>aslNO</td>\n",
-       "      <td>476</td>\n",
-       "      <td>14/6/2021</td>\n",
-       "      <td>84539</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2302.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6677</th>\n",
-       "      <td>aslSE</td>\n",
-       "      <td>476</td>\n",
-       "      <td>14/6/2021</td>\n",
-       "      <td>45692</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1009.0</td>\n",
-       "      <td>0.198610</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>6678 rows × 14 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      geografia  giorno       data  totale_casi_positivi  \\\n",
-       "0            AR       0  24/2/2020                     0   \n",
-       "1            FI       0  24/2/2020                     0   \n",
-       "2            GR       0  24/2/2020                     0   \n",
-       "3            LI       0  24/2/2020                     0   \n",
-       "4            LU       0  24/2/2020                     0   \n",
-       "...         ...     ...        ...                   ...   \n",
-       "6673         SI     476  14/6/2021                 13811   \n",
-       "6674    Toscana     476  14/6/2021                243457   \n",
-       "6675  aslCENTRO     476  14/6/2021                112671   \n",
-       "6676      aslNO     476  14/6/2021                 84539   \n",
-       "6677      aslSE     476  14/6/2021                 45692   \n",
-       "\n",
-       "      totale_casi_positivi_ab  deceduti  deceduti_inc  letalita  \\\n",
-       "0                    0.000000       NaN           NaN       NaN   \n",
-       "1                    0.000000       NaN           NaN       NaN   \n",
-       "2                    0.000000       NaN           NaN       NaN   \n",
-       "3                    0.000000       NaN           NaN       NaN   \n",
-       "4                    0.000000       NaN           NaN       NaN   \n",
-       "...                       ...       ...           ...       ...   \n",
-       "6673                52.408491     328.0      0.000000  2.374919   \n",
-       "6674                      NaN    6819.0      0.044014       NaN   \n",
-       "6675                      NaN    3417.0      0.029274       NaN   \n",
-       "6676                      NaN    2302.0      0.000000       NaN   \n",
-       "6677                      NaN    1009.0      0.198610       NaN   \n",
-       "\n",
-       "      totale_ricoveri  totale_ricoveri_inc  attualmente_positivi   dimessi  \\\n",
-       "0                 NaN                  NaN                   NaN       NaN   \n",
-       "1                 NaN                  NaN                   NaN       NaN   \n",
-       "2                 NaN                  NaN                   NaN       NaN   \n",
-       "3                 NaN                  NaN                   NaN       NaN   \n",
-       "4                 NaN                  NaN                   NaN       NaN   \n",
-       "...               ...                  ...                   ...       ...   \n",
-       "6673              NaN                  NaN                   NaN       NaN   \n",
-       "6674            253.0            -3.065134                4206.0  232432.0   \n",
-       "6675              NaN                  NaN                   NaN       NaN   \n",
-       "6676              NaN                  NaN                   NaN       NaN   \n",
-       "6677              NaN                  NaN                   NaN       NaN   \n",
-       "\n",
-       "        tamponi  tamponi_inc  \n",
-       "0           NaN          NaN  \n",
-       "1           NaN          NaN  \n",
-       "2           NaN          NaN  \n",
-       "3           NaN          NaN  \n",
-       "4           NaN          NaN  \n",
-       "...         ...          ...  \n",
-       "6673        NaN          NaN  \n",
-       "6674  3768423.0     0.107694  \n",
-       "6675        NaN          NaN  \n",
-       "6676        NaN          NaN  \n",
-       "6677        NaN          NaN  \n",
-       "\n",
-       "[6678 rows x 14 columns]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = pd.read_csv('../data/covidars.csv',sep='|')\n",
     "df"
