--- a/open_question/code/DynetX.ipynb
+++ b/open_question/code/DynetX.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 1,
    "id": "c459264b",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "30c6cf6c",
    "metadata": {},
    "outputs": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "19f89022",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "4f75f0e4",
    "metadata": {},
    "outputs": [],
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "de1e9d6e",
    "metadata": {},
    "outputs": [
@@ -104,7 +104,7 @@
        "8258"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "9bf98e9f",
    "metadata": {},
    "outputs": [
@@ -125,7 +125,7 @@
        "{0: 5}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "910516cf",
    "metadata": {},
    "outputs": [
@@ -146,13 +146,13 @@
        "[[(0, 12564, 197)], [(0, 14479, 209)], [(0, 1979, 237)], [(0, 15775, 414)]]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dn.algorithms.paths.time_respecting_paths(g,u=0)"
+    "dn.algorithms.paths.time_respecting_paths(g,u=0,v = 14479)"
    ]
   },
   {
